# dgupload

./: .dockerignore  .gitignore  Makefile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  compose.local.yml  compose.prod.yml  main.py  pyproject.toml  requirements.txt  test.db
.env/: .dev-sample  .env.local
alembic/: env.py
alembic/versions/: 2edebffea0df_.py  8584d4e7c7fc_message_text.py  c52d2910c5ce_message_text.py
client/docker/local/: Dockerfile
client/src/app/: page.tsx
compose/: auto_deploy_do.sh
compose/local/fastapi/: Dockerfile  Dockerfile copy  start
compose/local/fastapi/celery/flower/: start
compose/local/fastapi/celery/worker/: start
compose/local/nginx/: nginx.conf
compose/production/fastapi/: Dockerfile  start
compose/production/fastapi/celery/flower/: start
project/: __init__.py  celery_utils.py  config.py  logging.py
project/tdd/: __init__.py  factories.py  models.py  views.py
project/users/: __init__.py  tasks.py
project/users/templates/: form.html  form_simple.html  form_socketio.html  form_ws.html
project/ws/: manager.py  views.py
requirements/: base.txt  local.txt
tests/: conftest.py  test_celery_utils.py
tests/tdd/: test_tasks.py
tests/users/: test_views.py
